Increasing .main margin-top to fix overlap

--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -52,7 +52,7 @@ body, html {
     background-size: cover;
 }
 .main {
-    margin-top: 30px; /* Add a top margin to avoid content overlay */
+    margin-top: 40px; /* Add a top margin to avoid content overlay */
   position: relative;
   z-index: -1;
 } 
